customer-locations module completed
